--- a/new/.env
+++ b/new/.env
@@ -1,1 +1,1 @@
-TOKEN = MTE2MzgzMjEwODYzMzAzODkzMQ.G5iNRW.R6mGbMwnlzbRYCAM1smjvdmNUl1dfdAu7rqbGU
+TOKEN = MTE2MzgzMjEwODYzMzAzODkzMQ.GjrhE1.bYMIyge9WzNa178HgvCkdqklDc1bzRSueWY0DY
